# fastapi01

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.db
