[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
databases = "^0.9.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
